# benchwarmer.ai

./: .env.example  .gitignore  README.md  chat.db  dummy_algo.py  pyproject.toml  requirements.txt
.claude/: settings.local.json
agent-backend/: .gitignore  requirements.txt  server.py  test_websocket.py
agent-backend/benchwarmer/: config.py  database.py
agent-backend/benchwarmer.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
agent-backend/benchwarmer/agents/: backends.py  implementation.py  intake.py  orchestrator.py
agent-backend/benchwarmer/engine/: modal_runner.py  runner.py
agent-backend/benchwarmer/utils/: algorithm_sandbox.py  loader.py  modal_sandbox.py  sandbox.py
agent-backend/scripts/: run_benchmark.py
agent-backend/tests/: test_benchmark_suites.py  test_pdf_native.py
benchwarmer/: __init__.py  config.py
benchwarmer/agents/: __init__.py  code_generator.py  search.py  tools.py
benchwarmer/engine/: __init__.py  modal_runner.py
benchwarmer/pipeline/: __init__.py  ocr_handoff.py  pdf_parser.py
benchwarmer/schemas/: __init__.py  search.py
fetch-agent/: README.md  agent.py  agent1qfdhaqugfa_data.json  requirements.txt
frontend/: next.config.ts  package-lock.json  package.json
frontend-vite/src/components/: Header.tsx
frontend-vite/src/components/chat/: MessageList.tsx
frontend-vite/src/hooks/: use-chat.ts
frontend-vite/src/pages/: BenchmarksPage.tsx
frontend/src/app/: globals.css  layout.tsx  page.tsx
scripts/: run_benchmark.py  run_pdf_pipeline.py  run_search.py
tests/: __init__.py  test_search_agent.py
(+12 files in other folders)
